<resources>
    <!--tela de login-->
    <string name="app_name">SocialPet</string>
    <string name="txtEmail">Email</string>
    <string name="txtSenha">Senha</string>
    <string name="btnEntrar">ENTRAR</string>
    <string name="lblCadastrar">Caso não possua uma conta</string>
    <string name="btnCadastrar"><u>Cadastre-se</u></string>
    <string name="txtBemVindo">Bem vindo ao</string>
    <string name="txtSocialPet">Social Pet</string>
    <string name="txtApresentacao">Conecte-se a maior comunidade pet do Brasil</string>

    <!--tela de cadastro-->
    <string name="lblTipoConta">Qual o seu tipo de conta?</string>
    <string name="btnCadastrarPet">Pet</string>
    <string name="btnCadastrarProfi">Profissional</string>
    <string name="txtUsuario">Insira seu Usuário</string>

    <!--tela de cadastro Pet-->
    <string name="txtNomeUsuario">Nome do dono</string>
    <string name="txtEmailD">Email do dono</string>
    <string name="txtConfSenha">Confirmar Senha</string>
    <string name="btnCriar">Criar</string>

    <!--mensagens tela de cadastro-->
    <string name="Titulo_erro">Erro</string>
    <string name="action_ok">OK</string>
    <string name="mensagem_validaçãoDeCampos">Campo ou Campos vazios</string>
    <string name="mensagem_Email_invalido">Email invalido</string>
    <string name="mensagem_senhasDiferentes">Senha e confirmar senha não sao iguais</string>
    <string name="Titulo_Aviso">Aviso</string>
    <string name="title_activity_navegacao">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Recomendados</string>
    <string name="title_notifications">Notificação</string>
    <string name="ConfirmarSenha">Confirmar Senha</string>
    <string name="labelCadastro">Cadastro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="title_Adocao">Adoção</string>
    <string name="email_naoEncontrado">E-mail não encontrado</string>
    <string name="btn_voltar">voltar</string>
    <string name="lbl_Especie">Informe o nome do seu Pet</string>
    <string name="btn_postar">Postar</string>
    <string name="txt_descricao">Descricao</string>
    <string name="title_loja">Loja</string>
    <string name="textTipo">Escolha o tipo de perfil que deseja para continuar</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Avancar">Avançar</string>
    <string name="tipoAdocao">Centros de adoção</string>
    <string name="tipoLoja">Uso comercial (Loja)</string>
    <string name="tipoPessoal">Uso Pessoal</string>
    <string name="adicionar_descri">Adicionar Descrição</string>
    <string name="hint_descricao">Adicione uma descrição</string>
    <string name="adicionar_preco">Adicionar Preco</string>
    <string name="hint_preco">Adicione um preço para o Produto</string>
    <string name="preco">Preço</string>

</resources>