<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <View
            android:id="@+id/imagedotopo"
            style="@style/imgTopo"
            android:layout_width="match_parent"
            android:layout_height="173dp" />

        <LinearLayout
            android:id="@+id/linearLayoutCadastro"
            android:layout_width="346dp"
            android:layout_height="137dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_topo">

            <TextView
                android:id="@+id/txtBemVindo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/txtBemVindo"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_light"
                android:text="@string/txtSocialPet"
                android:textColor="@color/black"
                android:textSize="44sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/txtApresentacao"
                android:textColor="@color/black" />
        </LinearLayout>


        <EditText
            android:id="@+id/TxtEmail"
            style="@style/textBox"
            android:layout_marginTop="40dp"
            android:autofillHints="AUTOFILL_HINT_USERNAME"
            android:background="@drawable/txt_background"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:elevation="10dp"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/TxtSenha"
            style="@style/textBox"
            android:layout_marginTop="24dp"
            android:autofillHints="AUTOFILL_HINT_PASSWORD"
            android:background="@drawable/txt_background"
            android:drawableStart="@drawable/ic_senha"
            android:drawableLeft="@drawable/ic_senha"
            android:elevation="10dp"
            android:hint="@string/txtSenha"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TxtEmail" />

        <Button
            android:id="@+id/BtnEntrar"
            style="@style/btnLoginCadastro"
            android:layout_width="351dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:elevation="8dp"
            android:text="@string/btnEntrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="129dp"

            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/LblCadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/lblCadastrar"
                app:layout_constraintBottom_toTopOf="@+id/BtnCadastrar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/BtnCadastrar"
                android:layout_width="164dp"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="@string/btnCadastrar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</ScrollView>